Closed Bug 1679742 Opened 5 years ago Closed 5 years ago

Fix shell help message for wasm compiler selection

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: lth, Assigned: lth)

Details

Attachments

(1 file)

The help message for --wasm-compiler is not up-to-date.

Make the help message for --wasm-compiler comprehensive and helpful.

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: