Bug 1679742 - Fix help message. r=decoder DONTBUILD

Make the help message for --wasm-compiler comprehensive and helpful.

Fix fuzz flags accordingly and add one that's missing.

Differential Revision: https://phabricator.services.mozilla.com/D98138