js/src/shell/js.cpp
@@ -11241,8 +11241,14 @@ int main(int argc, char** argv, char** envp) {
       !op.addBoolOption('\0', "no-asmjs", "Disable asm.js compilation") ||
       !op.addStringOption(
           '\0', "wasm-compiler", "[option]",
-          "Choose to enable a subset of the wasm compilers (valid options are "
-          "none/baseline/ion/cranelift/baseline+ion/baseline+cranelift)") ||
+          "Choose to enable a subset of the wasm compilers, valid options are "
+          "'none', 'baseline', 'ion', 'cranelift', 'optimizing', "
+          "'baseline+ion', "
+          "'baseline+cranelift', 'baseline+optimizing'. Choosing 'ion' when "
+          "Ion is "
+          "not available or 'cranelift' when Cranelift is not available will "
+          "fail; "
+          "use 'optimizing' for cross-compiler compatibility.") ||
       !op.addBoolOption('\0', "wasm-verbose",
                         "Enable WebAssembly verbose logging") ||
       !op.addBoolOption('\0', "disable-wasm-huge-memory",
